--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -1,8 +1,165 @@
-doctype html  
-html(lang='en')  
- head
-   title #{htmlWebpackPlugin.options.title}
- body
-   h1 Pug Examples
-   div.container
-     p Cool Pug example!
+doctype html
+head
+	meta(charset='utf-8')
+	meta(http-equiv='X-UA-Compatible', content='IE=edge,chrome=1')
+	title #{htmlWebpackPlugin.options.title}
+	meta(name='description', content='')
+	meta(name='viewport', content='width=device-width, initial-scale=1')
+	link(rel='apple-touch-icon', href='apple-touch-icon.png')
+
+body
+	section.first-section
+		.container
+			.row
+				.col-md-12
+					.text-content
+						h2 Welcome To Ziggy
+						.line-dec
+						span This is clean & professional html template
+	section.second-section
+		.container
+			.row
+				.col-md-3.col-sm-6
+					.service-item
+						.icon
+							img(src='img/first-icon.png', alt='')
+						h4 Quick Editing
+						p
+							| Aliquam ex velit, viverra eu tristique vel, rhoncus nec ligula. In vel massa sed dolor pharetra interdum vitae posuere.
+				.col-md-3.col-sm-6
+					.service-item
+						.icon
+							img(src='img/second-icon.png', alt='')
+						h4 Responsive Layout
+						p
+							| Sed pulvinar ipsum id leo volutpat, in convallis lectus molestie. Aliquam nisi sapien, faucibus eu consequat id, egestas vitae augue.
+				.col-md-3.col-sm-6
+					.service-item
+						.icon
+							img(src='img/third-icon.png', alt='')
+						h4 Quick Support
+						p
+							| Aliquam ex velit, viverra eu tristique vel, rhoncus nec ligula. In vel massa sed dolor pharetra interdum vitae posuere.
+				.col-md-3.col-sm-6
+					.service-item
+						.icon
+							img(src='img/fourth-icon.png', alt='')
+						h4 Voice Chat
+						p
+							| Sed pulvinar ipsum id leo volutpat, in convallis lectus molestie. Aliquam nisi sapien, faucibus eu consequat id, egestas vitae augue.
+	section.third-section
+		.container
+			.row
+				.col-md-10.col-md-offset-1
+					.left-image.col-md-4
+						img(src='img/left-image.png', alt='')
+					.right-text.col-md-8
+						h4
+							em Integer suscipit
+							br
+							| Nullam volutpat mi vel
+						p
+							| Nulla tempor lectus at mauris bibendum porttitor. Aenean ultrices orci id nibh sodales, vel suscipit arcu vulputate. Pellentesque hendrerit diam quis leo dignissim, lacinia interdum nunc volutpat. Morbi lobortis mattis lectus, a dictum augue lobortis non. Fusce eu nulla sagittis, scelerisque eros fringilla, commodo dolor.
+	section.fourth-section
+		.container
+			.row
+				.col-md-3.col-sm-6
+					.portfolio-item.first-item
+						.image
+							a(href='img/01-big-item.jpg', data-lightbox='image-1')
+								img(src='img/first-item.jpg')
+						.text
+							span Nature
+							h4 Robotic Light
+				.col-md-3.col-sm-6
+					.portfolio-item.second-item
+						.image
+							a(href='img/02-big-item.jpg', data-lightbox='image-1')
+								img(src='img/second-item.jpg')
+						.text
+							span Architect
+							h4 Rock Solid
+				.col-md-3.col-sm-6
+					.portfolio-item.third-item
+						.image
+							a(href='img/03-big-item.jpg', data-lightbox='image-1')
+								img(src='img/third-item.jpg')
+						.text
+							span Focus
+							h4 Clean Design
+				.col-md-3.col-sm-6
+					.send-to-portfolio
+						span Do you want to see more?
+						.primary-button
+							a(href='portfolio-page.html') Visit gallery
+	section.fivth-section
+		.container
+			.row
+				.col-md-10.col-md-offset-1
+					.left-text.col-md-8
+						h4
+							em Aliquam efficitur
+							br
+							| augue et libero vulputate feugiat
+						p
+							| Mauris eget orci porta, aliquam neque sit amet, porttitor dui. Donec efficitur vehicula justo quis varius. Vivamus pharetra lorem eget turpis ornare tempus. Vivamus ac sodales lectus. Morbi rhoncus feugiat neque ultrices rhoncus. Maecenas ultrices, nisl pellentesque hendrerit dignissim, ante purus hendrerit urna, eu tristique est massa quis risus.
+					.right-image.col-md-4
+						img(src='img/right-image.png', alt='')
+	section.sixth-section
+		.container
+			.row
+				.col-md-6
+					.row
+						form#contact(action='', method='post')
+							.col-md-6
+								fieldset
+									input#name.form-control(name='name', type='text', placeholder='Your name...', required='')
+							.col-md-6
+								fieldset
+									input#email.form-control(name='email', type='email', placeholder='Your email...', required='')
+							.col-md-12
+								fieldset
+									textarea#message.form-control(name='message', rows='6', placeholder='Your message...', required='')
+							.col-md-12
+								fieldset
+									button#form-submit.btn(type='submit') Send Message
+				.col-md-5
+					.right-info
+						ul
+							li
+								a(href='#')
+									i.fa.fa-envelope
+									| hello@company.com
+							li
+								a(href='#')
+									i.fa.fa-phone
+									| 050 060 0780 / 050 060 0110
+							li
+								a(href='#')
+									i.fa.fa-map-marker
+									| 1186 New Street, ST 10990
+	footer
+		.container
+			.row
+				.col-md-12
+					ul
+						li
+							a(href='https://www.facebook.com/tooplate')
+								i.fa.fa-facebook
+						li
+							a(href='#')
+								i.fa.fa-twitter
+						li
+							a(href='#')
+								i.fa.fa-linkedin
+						li
+							a(href='#')
+								i.fa.fa-rss
+						li
+							a(href='#')
+								i.fa.fa-dribbble
+					p
+						| Copyright © 2017 Company Name 
+						| | Design: 
+						a(href='https://www.facebook.com/tooplate', target='_parent') Tooplate
+
