Style Sheet Debugging
Debugged the SASS files, so that the site is properly rendered.

--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -3,7 +3,7 @@ head
 	meta(charset='utf-8')
 	meta(http-equiv='X-UA-Compatible', content='IE=edge,chrome=1')
 	title #{htmlWebpackPlugin.options.title}
-	meta(name='description', content='')
+	meta(name='description', content='Code Our Dreams is dedicated to teaching students computer science, so that they may be equipped to build applications that drive positive change in our communities.')
 	meta(name='viewport', content='width=device-width, initial-scale=1')
 	link(rel='apple-touch-icon', href='apple-touch-icon.png')
 
