--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -4,10 +4,10 @@ doctype html
 head
 	meta(charset='utf-8')
 	meta(http-equiv='X-UA-Compatible', content='IE=edge,chrome=1')
-	title #{htmlWebpackPlugin.options.title}
+	title #{htmlWebpackPlugin.options.english.orgName}
 	meta(name='description', content='Code Our Dreams is dedicated to teaching students computer science, so that they may be equipped to build applications that drive positive change in our communities.')
 	meta(name='viewport', content='width=device-width, initial-scale=1')
-	link(rel='apple-touch-icon', href='apple-touch-icon.png')
+	//- link(rel='apple-touch-icon', href='apple-touch-icon.png')
 
 body
 	section.first-section
@@ -15,98 +15,60 @@ body
 			.row
 				.col-md-12
 					.text-content
-						h2 #{htmlWebpackPlugin.options.title}
+						h2 #{ htmlWebpackPlugin.options.english.orgName }
 						.line-dec
-						span #{htmlWebpackPlugin.options.english}
+						span #{ htmlWebpackPlugin.options.english.subtitle }
 	section.second-section
 		.container
 			.row
-				.col-md-3.col-sm-6
-					.service-item
-						.icon
-							img(src='src/static/img/first-icon.png', alt='')
-						h4 Quick Editing
-						p
-							| Aliquam ex velit, viverra eu tristique vel, rhoncus nec ligula. In vel massa sed dolor pharetra interdum vitae posuere.
-				.col-md-3.col-sm-6
-					.service-item
-						.icon
-							img(src='src/static/img/second-icon.png', alt='')
-						h4 Responsive Layout
-						p
-							| Sed pulvinar ipsum id leo volutpat, in convallis lectus molestie. Aliquam nisi sapien, faucibus eu consequat id, egestas vitae augue.
-				.col-md-3.col-sm-6
-					.service-item
-						.icon
-							img(src='src/static/img/third-icon.png', alt='')
-						h4 Quick Support
-						p
-							| Aliquam ex velit, viverra eu tristique vel, rhoncus nec ligula. In vel massa sed dolor pharetra interdum vitae posuere.
-				.col-md-3.col-sm-6
-					.service-item
-						.icon
-							img(src='src/static/img/fourth-icon.png', alt='')
-						h4 Voice Chat
-						p
-							| Sed pulvinar ipsum id leo volutpat, in convallis lectus molestie. Aliquam nisi sapien, faucibus eu consequat id, egestas vitae augue.
+				each value, index in htmlWebpackPlugin.options.english.values
+					.col-md-3.col-sm-6
+						.service-item
+							.icon
+								img(id='value'+index, alt=value.alt)
+								h4 #{ value.title }
+								p #{ value.detail }
 	section.third-section
 		.container
 			.row
 				.col-md-10.col-md-offset-1
 					.left-image.col-md-4
-						img(src='src/static/img/left-image.png', alt='')
+						img#missionImg(alt=htmlWebpackPlugin.options.english.missionImgAlt)
 					.right-text.col-md-8
 						h4
-							em Integer suscipit
+							em #{ htmlWebpackPlugin.options.english.missionSuperTitle }
 							br
-							| Nullam volutpat mi vel
-						p
-							| Nulla tempor lectus at mauris bibendum porttitor. Aenean ultrices orci id nibh sodales, vel suscipit arcu vulputate. Pellentesque hendrerit diam quis leo dignissim, lacinia interdum nunc volutpat. Morbi lobortis mattis lectus, a dictum augue lobortis non. Fusce eu nulla sagittis, scelerisque eros fringilla, commodo dolor.
+							| #{ htmlWebpackPlugin.options.english.missionTitle }
+						p #{ htmlWebpackPlugin.options.english.missionBody }
 	section.fourth-section
 		.container
 			.row
-				.col-md-3.col-sm-6
-					.portfolio-item.first-item
-						.image
-							a(href='src/static/img/01-big-item.jpg', data-lightbox='image-1')
-								img(src='src/static/img/first-item.jpg')
-						.text
-							span Nature
-							h4 Robotic Light
-				.col-md-3.col-sm-6
-					.portfolio-item.second-item
-						.image
-							a(href='src/static/img/02-big-item.jpg', data-lightbox='image-1')
-								img(src='src/static/img/second-item.jpg')
-						.text
-							span Architect
-							h4 Rock Solid
-				.col-md-3.col-sm-6
-					.portfolio-item.third-item
-						.image
-							a(href='src/static/img/03-big-item.jpg', data-lightbox='image-1')
-								img(src='src/static/img/third-item.jpg')
-						.text
-							span Focus
-							h4 Clean Design
-				.col-md-3.col-sm-6
-					.send-to-portfolio
-						span Do you want to see more?
-						.primary-button
-							a(href='portfolio-page.html') Visit gallery
-	section.fivth-section
+				each person, index in htmlWebpackPlugin.options.english.people
+					.col-md-3.col-sm-6
+						.portfolio-item.first-item
+							.image
+								a(id='bigPerson'+index, data-lightbox='image-'+index)
+									img(id='imgPerson'+index)
+							.text
+								h4 #{ person.name }
+								span #{ person.title}
+				//- .col-md-3.col-sm-6
+				//- 	.send-to-portfolio
+				//- 		span Do you want to see more?
+				//- 		.primary-button
+				//- 			a(href='portfolio-page.html') Visit gallery
+	section.fifth-section
 		.container
 			.row
 				.col-md-10.col-md-offset-1
 					.left-text.col-md-8
 						h4
-							em Aliquam efficitur
+							em #{ htmlWebpackPlugin.options.english.programSuperTitle }
 							br
-							| augue et libero vulputate feugiat
-						p
-							| Mauris eget orci porta, aliquam neque sit amet, porttitor dui. Donec efficitur vehicula justo quis varius. Vivamus pharetra lorem eget turpis ornare tempus. Vivamus ac sodales lectus. Morbi rhoncus feugiat neque ultrices rhoncus. Maecenas ultrices, nisl pellentesque hendrerit dignissim, ante purus hendrerit urna, eu tristique est massa quis risus.
-					.right-image.col-md-4
-						img(src='src/static/img/right-image.png', alt='')
+							|#{ htmlWebpackPlugin.options.english.programTitle }
+						p #{ htmlWebpackPlugin.options.english.programBody }
+						.right-image.col-md-4
+						img#programImg(alt=htmlWebpackPlugin.options.english.programImgAlt)
 	section.sixth-section
 		.container
 			.row
@@ -115,53 +77,47 @@ body
 						form#contact(action='', method='post')
 							.col-md-6
 								fieldset
-									input#name.form-control(name='name', type='text', placeholder='Your name...', required='')
+									input#name.form-control(name='name', type='text', placeholder=htmlWebpackPlugin.options.english.yourName required)
 							.col-md-6
 								fieldset
-									input#email.form-control(name='email', type='email', placeholder='Your email...', required='')
+									input#email.form-control(name='email', type='email', placeholder=htmlWebpackPlugin.options.english.yourEmail, required)
 							.col-md-12
 								fieldset
-									textarea#message.form-control(name='message', rows='6', placeholder='Your message...', required='')
+									textarea#message.form-control(name='message', rows='6', placeholder=htmlWebpackPlugin.options.english.yourMessage, required='')
 							.col-md-12
 								fieldset
-									button#form-submit.btn(type='submit') Send Message
+									button#form-submit.btn(type='submit') #{ htmlWebpackPlugin.options.english.sendMessage }
 				.col-md-5
 					.right-info
 						ul
 							li
 								a(href='#')
-									i.fa.fa-envelope
-									| hello@company.com
+									i.fa.fa-envelope 
+									| #{ htmlWebpackPlugin.options.english.email }
 							li
 								a(href='#')
 									i.fa.fa-phone
-									| 050 060 0780 / 050 060 0110
+									| #{ htmlWebpackPlugin.options.english.phone }
 							li
 								a(href='#')
 									i.fa.fa-map-marker
-									| 1186 New Street, ST 10990
+									| #{ htmlWebpackPlugin.options.english.address }
 	footer
 		.container
 			.row
 				.col-md-12
 					ul
 						li
-							a(href='https://www.facebook.com/tooplate')
+							a(href='https://www.facebook.com/CodeOurDreams')
 								i.fa.fa-facebook
 						li
 							a(href='#')
 								i.fa.fa-twitter
 						li
-							a(href='#')
-								i.fa.fa-linkedin
-						li
-							a(href='#')
-								i.fa.fa-rss
-						li
-							a(href='#')
-								i.fa.fa-dribbble
-					p
-						| Copyright © 2017 Company Name 
-						| | Design: 
-						a(href='https://www.facebook.com/tooplate', target='_parent') Tooplate
-
+							a(href='https://www.instagram.com/codeourdreams/')
+								i.fa.fa-instagram
+					p Copyright © 2018 Code Our Dreams. All Rights Reserved. 
+						|  | Made with 
+						i.fa.fa-heart.heart
+						|  by 
+						a(href='http://www.seliglabs.com') Selig Labs
