--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -111,10 +111,10 @@ body
 							a(href='https://www.facebook.com/CodeOurDreams')
 								i.fa.fa-facebook
 						li
-							a(href='#')
+							a(href='https://twitter.com/CodeOurDreams')
 								i.fa.fa-twitter
 						li
-							a(href='https://www.instagram.com/codeourdreams/')
+							a(href='https://www.instagram.com/CodeOurDreams')
 								i.fa.fa-instagram
 					p Copyright © 2018 Code Our Dreams. All Rights Reserved. 
 						|  | Made with 
