--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -57,12 +57,12 @@ body#landing
             br
             | &#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;Just apps. Lots of mother flipping apps.
         //- span.image
-        //-   img(src='images/pic01.jpg' alt='')
+        //-   img(src='/src/static/images/pic01.jpg' alt='')
       a.goto-next.scrolly(href='#one') Next
     // One
     section#one.spotlight.style1.bottom
       span.image.fit.main
-        img(src='images/pic02.jpg' alt='')
+        img(src='/src/static/images/pic02.jpg' alt='')
       .content
         .container
           .row
@@ -88,7 +88,7 @@ body#landing
     // Two
     section#two.spotlight.style2.right
       span.image.fit.main
-        img(src='images/pic03.jpg' alt='')
+        img(src='/src/static/images/pic03.jpg' alt='')
       .content
         header
           h2 Interdum amet non magna accumsan
@@ -102,7 +102,7 @@ body#landing
     // Three
     section#three.spotlight.style3.left
       span.image.fit.main.bottom
-        img(src='images/pic04.jpg' alt='')
+        img(src='/src/static/images/pic04.jpg' alt='')
       .content
         header
           h2 Interdum felis blandit praesent sed augue
@@ -187,7 +187,7 @@ body#landing
         li
           | Design: 
           a(href='http://html5up.net') HTML5 UP
-  //- // Scripts
+  // Scripts
   //- script(src='assets/js/jquery.min.js')
   //- script(src='assets/js/jquery.scrolly.min.js')
   //- script(src='assets/js/jquery.dropotron.min.js')
