--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3349,10 +3349,10 @@
 		}
 
 		#banner:after {
-			background-image: -moz-linear-gradient(top, rgba(23, 24, 32, 0.95), rgba(23, 24, 32, 0.95)), url("/src/static/images/overlay.png");;
-			background-image: -webkit-linear-gradient(top, rgba(23, 24, 32, 0.95), rgba(23, 24, 32, 0.95)), url("/src/static/images/overlay.png");;
-			background-image: -ms-linear-gradient(top, rgba(23, 24, 32, 0.95), rgba(23, 24, 32, 0.95)), url("/src/static/images/overlay.png");;
-			background-image: linear-gradient(top, rgba(23, 24, 32, 0.95), rgba(23, 24, 32, 0.95)), url("/src/static/images/overlay.png");;
+			background-image: -moz-linear-gradient(to bottom, rgba(23, 24, 32, 0.95), rgba(23, 24, 32, 0.95)), url("/src/static/images/overlay.png");;
+			background-image: -webkit-linear-gradient(to bottom, rgba(23, 24, 32, 0.95), rgba(23, 24, 32, 0.95)), url("/src/static/images/overlay.png");;
+			background-image: -ms-linear-gradient(to bottom, rgba(23, 24, 32, 0.95), rgba(23, 24, 32, 0.95)), url("/src/static/images/overlay.png");;
+			background-image: linear-gradient(to bottom, rgba(23, 24, 32, 0.95), rgba(23, 24, 32, 0.95)), url("/src/static/images/overlay.png");;
 			content: '';
 			display: block;
 			height: 100%;
