--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2456,7 +2456,7 @@
 			position: absolute;
 			left: 0;
 			top: 0;
-			background-image: url("/src/static/images/overlay.png");
+			background-image: url('../static/images/overlay.png');
 			width: 100%;
 			height: 100%;
 			z-index: 1;
@@ -2827,7 +2827,7 @@
 	}
 
 		.goto-next:before {
-			background-image: url("/src/static/images/arrow.svg");
+			background-image: url('../static/images/arrow.svg');
 			background-position: center center;
 			background-repeat: no-repeat;
 			background-size: contain;
@@ -2935,7 +2935,7 @@
 		}
 
 		.spotlight:before {
-			background-image: url("/src/static/images/overlay.png");
+			background-image: url('../static/images/overlay.png');
 			content: '';
 			display: block;
 			height: 100%;
@@ -3325,12 +3325,11 @@
 		position: absolute;
 	}
 
-/* Banner */
-
-	#banner {
+/* Home */
+	#home {
 		background-attachment: fixed;
 		background-color: #272833;
-		background-image: url("/src/static/images/banner.jpg");
+		background-image: url('../static/images/banner.jpg');
 		background-position: center center;
 		background-size: cover;
 		box-shadow: 0 0.25em 0.5em 0 rgba(0, 0, 0, 0.25);
@@ -3340,7 +3339,7 @@
 		z-index: 21;
 	}
 
-		#banner:before {
+		#home:before {
 			content: '';
 			display: inline-block;
 			height: 100vh;
@@ -3348,11 +3347,11 @@
 			width: 1%;
 		}
 
-		#banner:after {
-			background-image: -moz-linear-gradient(to bottom, rgba(23, 24, 32, 0.95), rgba(23, 24, 32, 0.95)), url("/src/static/images/overlay.png");;
-			background-image: -webkit-linear-gradient(to bottom, rgba(23, 24, 32, 0.95), rgba(23, 24, 32, 0.95)), url("/src/static/images/overlay.png");;
-			background-image: -ms-linear-gradient(to bottom, rgba(23, 24, 32, 0.95), rgba(23, 24, 32, 0.95)), url("/src/static/images/overlay.png");;
-			background-image: linear-gradient(to bottom, rgba(23, 24, 32, 0.95), rgba(23, 24, 32, 0.95)), url("/src/static/images/overlay.png");;
+		#home:after {
+			background-image: -moz-linear-gradient(to bottom, rgba(23, 24, 32, 0.95), rgba(23, 24, 32, 0.95)), url('../static/images/overlay.png');
+			background-image: -webkit-linear-gradient(to bottom, rgba(23, 24, 32, 0.95), rgba(23, 24, 32, 0.95)), url('../static/images/overlay.png');
+			background-image: -ms-linear-gradient(to bottom, rgba(23, 24, 32, 0.95), rgba(23, 24, 32, 0.95)), url('../static/images/overlay.png');
+			background-image: linear-gradient(to bottom, rgba(23, 24, 32, 0.95), rgba(23, 24, 32, 0.95)), url('../static/images/overlay.png');
 			content: '';
 			display: block;
 			height: 100%;
@@ -3362,7 +3361,7 @@
 			width: 100%;
 		}
 
-		#banner .content {
+		#home .content {
 			display: inline-block;
 			margin-right: 1%;
 			max-width: 95%;
@@ -3373,22 +3372,22 @@
 			z-index: 1;
 		}
 
-			#banner .content header {
+			#home .content header {
 				display: inline-block;
 				vertical-align: middle;
 			}
 
-				#banner .content header h2 {
+				#home .content header h2 {
 					font-size: 2.5em;
 					margin: 0;
 				}
 
-				#banner .content header p {
+				#home .content header p {
 					margin: 0.5em 0 0 0;
 					top: 0;
 				}
 
-			#banner .content .image {
+			#home .content .image {
 				border-radius: 100%;
 				display: inline-block;
 				height: 18em;
@@ -3397,13 +3396,13 @@
 				width: 18em;
 			}
 
-				#banner .content .image img {
+				#home .content .image img {
 					border-radius: 100%;
 					display: block;
 					width: 100%;
 				}
 
-	body.is-touch #banner {
+	body.is-touch #home {
 		background-attachment: scroll;
 	}
 
@@ -3511,7 +3510,7 @@
 
 		/* Banner */
 
-			#banner .content {
+			#home .content {
 				padding: 4.5em;
 			}
 
@@ -3573,26 +3572,26 @@
 
 		/* Banner */
 
-			#banner {
+			#home {
 				background-attachment: scroll;
 			}
 
-				#banner .goto-next {
+				#home .goto-next {
 					height: 7em;
 				}
 
-				#banner .content {
+				#home .content {
 					padding: 9em 0;
 					text-align: center;
 				}
 
-					#banner .content header {
+					#home .content header {
 						display: block;
 						margin: 0 0 2em 0;
 						text-align: center;
 					}
 
-					#banner .content .image {
+					#home .content .image {
 						margin: 0;
 					}
 
@@ -3695,24 +3694,24 @@
 
 		/* Banner */
 
-			#banner {
+			#home {
 				box-shadow: 0 0.125em 0.5em 0 rgba(0, 0, 0, 0.25);
 				min-height: calc(100vh - 44px);
 			}
 
-				#banner:before {
+				#home:before {
 					height: calc(100vh - 44px);
 				}
 
-				#banner .content {
+				#home .content {
 					padding: 4.0625em 1.5em 4.875em 1.5em;
 				}
 
-					#banner .content header h2 {
+					#home .content header h2 {
 						font-size: 1.5em;
 					}
 
-					#banner .content .image {
+					#home .content .image {
 						height: 9em;
 						width: 9em;
 					}
@@ -3974,7 +3973,7 @@
 
 		/* Banner */
 
-			#banner .content {
+			#home .content {
 				padding: 3em 1.5625em 5.25em 1.5625em;
 			}
 
