--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -1,6 +1,17 @@
+- var utils = htmlWebpackPlugin.options.utils;
+- var lang = htmlWebpackPlugin.options.language;
+
+mixin arrow
+  svg(xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' width='36px' height='18px' viewBox='0 0 36 18' zoomAndPan='disable' preserveAspectRatio='none')
+    style(type='text/css')
+      <![CDATA[ line { stroke: #fff; stroke-width: 1; } ]]>
+    line(x1='0' y1='0' x2='18' y2='18')
+    line(x1='36' y1='0' x2='18' y2='18')
+
+
 doctype html
 head
-  title #{ htmlWebpackPlugin.options.english.orgName }
+  title= lang.orgName
   meta(charset='utf-8')
   meta(name='viewport' content='width=device-width, initial-scale=1')
   //- <!--[if lte IE 8]>
@@ -13,187 +24,164 @@ head
   //- <!--[if lte IE 8]>
   //- <link rel="stylesheet" href="assets/css/ie8.css" />
   //- <![endif]-->
-body#landing
-  #page-wrapper
-    // Header
-    header#header
-      h1#logo
-        a(href='index.html') #{ htmlWebpackPlugin.options.english.orgName }
-      nav#nav
-        ul
+body
+  //- Header
+  header#header
+    h1#logo
+      a(href='/')= utils.toTitleCase(lang.orgName)
+    nav#nav
+      ul
+        each navItem in lang.nav
           li
-            a(href='index.html') Home
-          li
-            a(href='#') Layouts
-            ul
-              li
-                a(href='left-sidebar.html') Left Sidebar
-              li
-                a(href='right-sidebar.html') Right Sidebar
-              li
-                a(href='no-sidebar.html') No Sidebar
-              li
-                a(href='#') Submenu
-                ul
-                  li
-                    a(href='#') Option 1
-                  li
-                    a(href='#') Option 2
-                  li
-                    a(href='#') Option 3
-                  li
-                    a(href='#') Option 4
-          li
-            a(href='elements.html') Elements
-          li
-            a.button.special(href='#') Sign Up
-    // Banner
-    section#banner
-      .content
-        header
-          h2 #{ htmlWebpackPlugin.options.english.orgName }
-          p
-            | And there are no hoverboards or flying cars.
-            br
-            | &#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;Just apps. Lots of mother flipping apps.
-        //- span.image
-        //-   img(src='/src/static/images/pic01.jpg' alt='')
-      a.goto-next.scrolly(href='#one') Next
-    // One
-    section#one.spotlight.style1.bottom
-      span.image.fit.main
-        img(src='/src/static/images/pic02.jpg' alt='')
-      .content
-        .container
-          .row
-            .4u(class='12u$(medium)')
-              header
-                h2 Odio faucibus ipsum integer consequat
-                p Nascetur eu nibh vestibulum amet gravida nascetur praesent
-            .4u(class='12u$(medium)')
-              p
-                | Feugiat accumsan lorem eu ac lorem amet sed accumsan donec.
-                | Blandit orci porttitor semper. Arcu phasellus tortor enim mi
-                | nisi praesent dolor adipiscing. Integer mi sed nascetur cep aliquet
-                | augue varius tempus lobortis porttitor accumsan consequat
-                | adipiscing lorem dolor.
-            .4u(class='12u$(medium)')
-              p
-                | Morbi enim nascetur et placerat lorem sed iaculis neque ante
-                | adipiscing adipiscing metus massa. Blandit orci porttitor semper.
-                | Arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer
-                | mi sed nascetur cep aliquet augue varius tempus. Feugiat lorem
-                | ipsum dolor nullam.
-      a.goto-next.scrolly(href='#two') Next
-    // Two
-    section#two.spotlight.style2.right
-      span.image.fit.main
-        img(src='/src/static/images/pic03.jpg' alt='')
-      .content
-        header
-          h2 Interdum amet non magna accumsan
-          p Nunc commodo accumsan eget id nisi eu col volutpat magna
+            a(class=(navItem.button ? 'button' + (navItem.specialBtn ? ' special' : '') : '') href=navItem.ref)= navItem.label
+        //- li
+        //-   a(href='#') Layouts
+        //-   ul
+        //-     li
+        //-       a(href='left-sidebar.html') Left Sidebar
+        //-     li
+        //-       a(href='#') Submenu
+        //-       ul
+        //-         li
+        //-           a(href='#') Option 1
+
+  //- Home
+  section#home
+    .content
+      header
+        h2= utils.toTitleCase(lang.orgName)
         p
-          | Feugiat accumsan lorem eu ac lorem amet ac arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer mi sed nascetur cep aliquet augue varius tempus lobortis porttitor lorem et accumsan consequat adipiscing lorem.
+          | #{ lang.home.subtitle1.toLowerCase() }
+          br
+          | &nbsp;#{ lang.home.subtitle2.toLowerCase() }
+    +arrow
+    a.goto-next.scrolly(href='#mission') Next
+
+  //- Mission
+  section#mission.spotlight.style1.bottom
+    span.image.fit.main
+      img#imgMission(alt='')
+    .content
+      .container
+        h2= lang.mission
+    a.goto-next.scrolly(href='#values') Next
+
+  //- Values
+  section#values.spotlight.style2.right
+    span.image.fit.main
+      img#imgValues(alt='')
+    .content
+      header
+        h2= utils.toTitleCase(lang.values.title)
+      each value in lang.values.values
+        .row
+          .4u(class='12u$(small)')
+            span.icon.alt.major(class='fas fa-' + value.icon)
+          .8u(class='12u$(small)')
+            h3= value.label
+            h6= value.description
+      ul.actions
+        li
+          a.button(href='#values') Learn More
+    a.goto-next.scrolly(href='#three') Next
+    
+  //- Get Involved
+  section#getInvolved.spotlight.style3.left
+    span.image.fit.main.bottom
+      img#imgGetInvolved(alt='')
+    .content
+      header
+        h2= utils.toTitleCase(lang.getInvolved.title)
+        p= lang.getInvolved.subtitle
+      p= lang.getInvolved.body
+      ul.actions
+        each action in lang.getInvolved.actions
+          li
+            a.button(class=(action.specialBtn ? ' special' : '') href=action.ref)= action.label
+          br
+          br
+    a.goto-next.scrolly(href='#about') Next
+
+  //- About
+  section#about.wrapper.style1.special.fade-up
+    .container
+      header.major
+        h2= lang.about.title
+        p= lang.about.subtitle
+      .box.alt
+        .row.uniform
+          each person in lang.about.people
+            section.4u(class='6u$(medium) 12u$(xsmall)')
+              span.icon.alt.major.fa-user
+              h3= person.name
+              p= person.title
+      footer.major
         ul.actions
           li
-            a.button(href='#') Learn More
-      a.goto-next.scrolly(href='#three') Next
-    // Three
-    section#three.spotlight.style3.left
-      span.image.fit.main.bottom
-        img(src='/src/static/images/pic04.jpg' alt='')
-      .content
-        header
-          h2 Interdum felis blandit praesent sed augue
-          p Accumsan integer ultricies aliquam vel massa sapien phasellus
-        p
-          | Feugiat accumsan lorem eu ac lorem amet ac arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer mi sed nascetur cep aliquet augue varius tempus lobortis porttitor lorem et accumsan consequat adipiscing lorem.
-        ul.actions
-          li
-            a.button(href='#') Learn More
-      a.goto-next.scrolly(href='#four') Next
-    // Four
-    section#four.wrapper.style1.special.fade-up
-      .container
-        header.major
-          h2 Accumsan sed tempus adipiscing blandit
-          p Iaculis ac volutpat vis non enim gravida nisi faucibus posuere arcu consequat
-        .box.alt
-          .row.uniform
-            section.4u(class='6u(medium) 12u$(xsmall)')
-              span.icon.alt.major.fa-area-chart
-              h3 Ipsum sed commodo
-              p Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.
-            section.4u(class='6u$(medium) 12u$(xsmall)')
-              span.icon.alt.major.fa-comment
-              h3 Eleifend lorem ornare
-              p Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.
-            section.4u(class='6u(medium) 12u$(xsmall)')
-              span.icon.alt.major.fa-flask
-              h3 Cubilia cep lobortis
-              p Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.
-            section.4u(class='6u$(medium) 12u$(xsmall)')
-              span.icon.alt.major.fa-paper-plane
-              h3 Non semper interdum
-              p Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.
-            section.4u(class='6u(medium) 12u$(xsmall)')
-              span.icon.alt.major.fa-file
-              h3 Odio laoreet accumsan
-              p Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.
-            section.4u(class='6u$(medium) 12u$(xsmall)')
-              span.icon.alt.major.fa-lock
-              h3 Massa arcu accumsan
-              p Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.
-        footer.major
-          ul.actions
-            li
-              a.button(href='#') Magna sed feugiat
-    // Five
-    section#five.wrapper.style2.special.fade
-      .container
-        header
-          h2 Magna faucibus lorem diam
-          p Ante metus praesent faucibus ante integer id accumsan eleifend
-        form.container(method='post' action='#' class='50%')
-          .row.uniform(class='50%')
-            .8u(class='12u$(xsmall)')
-              input#email(type='email' name='email' placeholder='Your Email Address')
-            .4u(class='12u$(xsmall)')
-              input.fit.special(type='submit' value='Get Started')
-    // Footer
-    footer#footer
-      ul.icons
+            a.button(href='#') Magna sed feugiat
+
+  // Five
+  section#contact.wrapper.style2.special.fade
+    .container
+      header
+        h2= lang.contact.title
+        p= lang.contact.subtitle
+      h3= lang.contact.mailingList.title
+      form.container(method='post' action='#' class='50%')
+        .row.uniform(class='50%')
+          .8u(class='12u$(xsmall)')
+            input#email(type='email' name='email' placeholder= lang.contact.mailingList.placeholder)
+          .4u(class='12u$(xsmall)')
+            input.fit.special(type='submit' value= lang.contact.mailingList.button)
+      hr
+      h3= lang.contact.message.title
+      form.container(method='post' action='#' class='75%')
+        .row.uniform
+          .6u(class='12u$(xsmall)')
+            input#name(type='text' name='name' placeholder= lang.contact.message.name)
+          .6u(class='12u$(xsmall)')
+            input#email(type='email' name='email' placeholder= lang.contact.message.email)
+          .12u
+            textarea#message(name='message' rows='5' placeholder= lang.contact.message.message)
+          .12u
+            input.fit.special(type='submit' value= lang.contact.message.button)
+
+  //- Footer
+  footer#footer
+    ul.icons
+      li
+        a.icon.alt(href='https://twitter.com/CodeOurDreams' target='_blank')
+          i.fab.fa-twitter
+          span.label Twitter
+      li
+        a.icon.alt(href='https://www.facebook.com/CodeOurDreams' target='_blank')
+          i.fab.fa-facebook
+          span.label Facebook
+      li
+        a.icon.alt(href='https://www.linkedin.com/company/codeourdreams' target='_blank')
+          i.fab.fa-linkedin
+          span.label LinkedIn
+      li
+        a.icon.alt(href='https://www.instagram.com/CodeOurDreams/' target='_blank')
+          i.fab.fa-instagram
+          span.label Instagram
+      li
+        a.icon.alt(href='https://github.com/orgs/CodeOurDreams' target='_blank')
+          i.fab.fa-github
+          span.label GitHub
+      li
+        a.icon.alt(href='mailto:info@codeourdreams.org' target='_blank')
+          i.fas.fa-envelope
+          span.label Email
+          
+    ul.copyright
+      li= lang.footer.copyright
+      each link in lang.footer.links
         li
-          a.icon.alt.fa-twitter(href='#')
-            span.label Twitter
-        li
-          a.icon.alt.fa-facebook(href='#')
-            span.label Facebook
-        li
-          a.icon.alt.fa-linkedin(href='#')
-            span.label LinkedIn
-        li
-          a.icon.alt.fa-instagram(href='#')
-            span.label Instagram
-        li
-          a.icon.alt.fa-github(href='#')
-            span.label GitHub
-        li
-          a.icon.alt.fa-envelope(href='#')
-            span.label Email
-      ul.copyright
-        li &copy; Untitled. All rights reserved.
-        li
-          | Design: 
-          a(href='http://html5up.net') HTML5 UP
-  // Scripts
-  //- script(src='assets/js/jquery.min.js')
-  //- script(src='assets/js/jquery.scrolly.min.js')
-  //- script(src='assets/js/jquery.dropotron.min.js')
-  //- script(src='assets/js/jquery.scrollex.min.js')
   //- script(src='assets/js/skel.min.js')
-  //- script(src='assets/js/util.js')
-  //- //- if lte IE 8
-  //- //- script(src='assets/js/ie/respond.min.js')
-  //- script(src='assets/js/main.js')
+          a(href=link.ref target='_blank')= link.label
+      li
+        | Made with&nbsp;
+        i.fas.fa-heart
+        |&nbsp;by&nbsp;
+        a(href='https://www.seliglabs.com' target='_blank') Selig Labs
