--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -2,4 +2,5 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:100,300,100italic,300italic');
 // @import 'bootstrap/scss/bootstrap.scss';
 // @import './bootstrap-theme';
-@import './main';
+@import './theme';
+@import './custom'
