Added Images and Sliders
Added sliders to support additional content and images.

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -2,5 +2,6 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:100,300,100italic,300italic');
 // @import 'bootstrap/scss/bootstrap.scss';
 // @import './bootstrap-theme';
+// @import './vendors/slidebars';
 @import './theme';
 @import './custom'
