--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -90,6 +90,11 @@
     cursor: pointer;
 }
 
+// Sliders
+.extra-wide {
+    width: 56em !important;
+}
+
 // Spacing
 .no-margins {
     margin: 0;
