--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -3329,7 +3329,7 @@
 	#home {
 		background-attachment: fixed;
 		background-color: #272833;
-		background-image: url('../static/images/banner.jpg');
+		background-image: url('../static/images/backgrounds/devices.jpg');
 		background-position: center center;
 		background-size: cover;
 		box-shadow: 0 0.25em 0.5em 0 rgba(0, 0, 0, 0.25);
