--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -1,3 +1,32 @@
+/* About */
+#about {
+    background-attachment: fixed;
+    background-color: #272833;
+    background-image: url('../static/images/backgrounds/hands.png');
+    background-position: center center;
+    background-size: cover;
+    position: relative;
+}
+
+    #about:after {
+        background-image: -moz-linear-gradient(to bottom, rgba(23, 24, 32, 0.95), rgba(23, 24, 32, 0.95)), url('../static/images/overlay.png');
+        background-image: -webkit-linear-gradient(to bottom, rgba(23, 24, 32, 0.95), rgba(23, 24, 32, 0.95)), url('../static/images/overlay.png');
+        background-image: -ms-linear-gradient(to bottom, rgba(23, 24, 32, 0.95), rgba(23, 24, 32, 0.95)), url('../static/images/overlay.png');
+        background-image: linear-gradient(to bottom, rgba(23, 24, 32, 0.95), rgba(23, 24, 32, 0.95)), url('../static/images/overlay.png');
+        content: '';
+        display: block;
+        height: 100%;
+        left: 0;
+        position: absolute;
+        top: 0;
+        width: 100%;
+    }
+
+#about .container {
+    position: relative;
+    z-index: 1;
+}
+
 // Buttons
 .fix-width {
     width: 225px;
