Set Default Values

--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -94,6 +94,10 @@
     color: white;
 }
 
+.modalOpen {
+    cursor: pointer;
+}
+
 /* Add Animation */
 @-webkit-keyframes animatetop {
     from {top:-300px; opacity:0} 
