--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -198,6 +198,6 @@ body
           .6u(class='12u$(xsmall)')
             img.auto-size-image(id='modalBioImg', src='/src/static/images/people/selig.jpg')
           .6u(class='12u$(xsmall)')
-            h3.no-margins#modalBioName
-            p#modalBioTitle
-            p#modalBioBio
+            h3.no-margins#modalBioName Name
+            p#modalBioTitle Title
+            p#modalBioBio Bio
