Removed Old Images and Fixed Arrow

--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -2827,7 +2827,7 @@
 	}
 
 		.goto-next:before {
-			background-image: url('../static/images/arrow.svg');
+			background-image: url('../static/images/arrow.png');
 			background-position: center center;
 			background-repeat: no-repeat;
 			background-size: contain;
