--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -118,6 +118,7 @@ body
                 img.rounded(id=person.image, height='120')
                 h3.no-margins= person.name
                 p= person.title
+    a.goto-next.scrolly(href='#contact') Next
       //- footer.major
       //-   ul.actions
       //-     li
