--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -3,5 +3,6 @@
 // @import 'bootstrap/scss/bootstrap.scss';
 // @import './bootstrap-theme';
 // @import './vendors/slidebars';
+// @import './vendors/fontawesome/fontawesome';
 @import './theme';
 @import './custom'
