--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -226,8 +226,10 @@ body
       .modal-body
         form#payment-form(method='post')
           .form-row
+            label(for='cardholder-name') Name
+            input.field.is-empty(name='cardholder-name', placeholder='Jane Doe')
             label(for='card-element') Credit or debit card
-            #card-element
+            div#card-element Test
               // A Stripe Element will be inserted here.
             // Used to display form errors.
             #card-errors(role='alert')
