--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -226,13 +226,22 @@ body
       .modal-body
         form#payment-form(method='post')
           .form-row
-            label(for='cardholder-name') Name
-            input.field.is-empty(name='cardholder-name', placeholder='Jane Doe')
-            label(for='card-element') Credit or debit card
-            div#card-element Test
-              // A Stripe Element will be inserted here.
-            // Used to display form errors.
-            #card-errors(role='alert')
+            .row.uniform
+              .6u(class='12u$(xsmall)')
+                label Donor Information
+                  input#cardholder-name(type='text', name='cardholder-name', placeholder='Name')
+                  input#cardholder-email(type='email', name='cardholder-email', placeholder='Email')
+              .6u(class='12u$(xsmall)')
+                label Credit or Debit Card Information
+                input#payment-anount(type='number' name='payment-anount', placeholder='Amount', min='1', step='any')
+                br
+                br
+                div#card-element Test
+                  // A Stripe Element will be inserted here.
+                // Used to display form errors.
+              .row
+              .12u
+                #card-errors(role='alert')
           button.button.special Submit Payment
 
 
