Ensured Bio Modal p Elements
Ensured the p and h3 elements in bio modal get included.

--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -214,9 +214,9 @@ body
           .6u(class='12u$(xsmall)')
             img.auto-size-image#modalBioImg
           .6u(class='12u$(xsmall)')
-            h3.no-margins#modalBioName
-            p#modalBioTitle
-            p#modalBioBio
+            h3.no-margins#modalBioName  &nbsp;
+            p#modalBioTitle &nbsp;
+            p#modalBioBio &nbsp;
 
   .modal#modalDonate
     .modal-content
