Fixed Modal Closing
Fixed modal closing and updated JavaScript

--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -221,7 +221,7 @@ body
   .modal#modalDonate
     .modal-content
       .modal-header
-        span.close#modalBioClose &times;
+        span.close#modalDonateClose &times;
         h2.Modal= lang.modalDonate.header
       .modal-body
         form#payment-form(method='post')
