--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -1,19 +1,12 @@
 - var utils = htmlWebpackPlugin.options.utils;
 - var lang = htmlWebpackPlugin.options.language;
 
-mixin arrow
-  svg(xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' width='36px' height='18px' viewBox='0 0 36 18' zoomAndPan='disable' preserveAspectRatio='none')
-    style(type='text/css')
-      <![CDATA[ line { stroke: #fff; stroke-width: 1; } ]]>
-    line(x1='0' y1='0' x2='18' y2='18')
-    line(x1='36' y1='0' x2='18' y2='18')
-
-
 doctype html
 head
   title= lang.orgName
   meta(charset='utf-8')
   meta(name='viewport' content='width=device-width, initial-scale=1')
+  link(rel='stylesheet' href='https://use.fontawesome.com/releases/v5.0.13/css/all.css' integrity='sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp' crossorigin='anonymous')
   //- <!--[if lte IE 8]>
   //- <script src="assets/js/ie/html5shiv.js"></script>
   //- <![endif]-->
@@ -174,7 +167,7 @@ body
           span.label Twitter
       li
         a.icon.alt(href='https://www.facebook.com/CodeOurDreams' target='_blank')
-          i.fab.fa-facebook
+          i.twitter
           span.label Facebook
       li
         a.icon.alt(href='https://www.linkedin.com/company/codeourdreams' target='_blank')
