--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -4,5 +4,10 @@
 // @import './bootstrap-theme';
 // @import './vendors/slidebars';
 // @import './vendors/fontawesome/fontawesome';
+// @import url('https://use.fontawesome.com/releases/v5.0.13/css/all.css');
+@import './vendors/fontawesome/fontawesome.scss';
+@import './vendors/fontawesome/fa-solid.scss';
+@import './vendors/fontawesome/fa-brands.scss';
+
 @import './theme';
-@import './custom'
+@import './custom';
