--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -154,3 +154,7 @@
 .modal input::-ms-input-placeholder { /* Microsoft Edge */
     color: #AAB7C4 !important;
 }
+
+.newlines {
+    white-space: pre;
+}
