--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -1,3 +1,5 @@
+/* Header *>
+
 /* About */
 #about {
     background-attachment: fixed;
@@ -8,19 +10,19 @@
     position: relative;
 }
 
-    #about:after {
-        background-image: -moz-linear-gradient(     to bottom, rgba(23, 24, 32, 0.75), rgba(23, 24, 32, 0.75)), url('../static/images/overlay.png');
-        background-image: -webkit-linear-gradient(  to bottom, rgba(23, 24, 32, 0.75), rgba(23, 24, 32, 0.75)), url('../static/images/overlay.png');
-        background-image: -ms-linear-gradient(      to bottom, rgba(23, 24, 32, 0.75), rgba(23, 24, 32, 0.75)), url('../static/images/overlay.png');
-        background-image: linear-gradient(          to bottom, rgba(23, 24, 32, 0.75), rgba(23, 24, 32, 0.75)), url('../static/images/overlay.png');
-        content: '';
-        display: block;
-        height: 100%;
-        left: 0;
-        position: absolute;
-        top: 0;
-        width: 100%;
-    }
+#about:after {
+    background-image: -moz-linear-gradient(     to bottom, rgba(23, 24, 32, 0.75), rgba(23, 24, 32, 0.75)), url('../static/images/overlay.png');
+    background-image: -webkit-linear-gradient(  to bottom, rgba(23, 24, 32, 0.75), rgba(23, 24, 32, 0.75)), url('../static/images/overlay.png');
+    background-image: -ms-linear-gradient(      to bottom, rgba(23, 24, 32, 0.75), rgba(23, 24, 32, 0.75)), url('../static/images/overlay.png');
+    background-image: linear-gradient(          to bottom, rgba(23, 24, 32, 0.75), rgba(23, 24, 32, 0.75)), url('../static/images/overlay.png');
+    content: '';
+    display: block;
+    height: 100%;
+    left: 0;
+    position: absolute;
+    top: 0;
+    width: 100%;
+}
 
 #about .container {
     position: relative;
